# XSTL

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cppcheck_report.txt  static_analysis.report.txt
.github/workflows/: build_docs.yaml  cmake_build.yaml  macos.yaml  static_analysis.yaml  ubuntu.yaml  windows.yaml
docs/source/: conf.py  index.md
include/c_xlib/: cstddef.h
include/config/: config.h  config.h.in  version.h  zxx.config.h
include/container/: array.h  darray  darray.h  deque.h  forward_list  forward_list.h  list.h  map  rb_tree  set  unordered_map
include/xstl/: algorithm.hpp  array.hpp  deque.hpp  forward_list.hpp  hash_table.hpp  layout.temp.hpp  list.hpp  map.hpp  meta_container.hpp  random.hpp  rb_tree.hpp  set.hpp  type_traits.hpp  unordered_map.hpp  unordered_set.hpp  vector.hpp
reports/: array.debug.xml
scripts/: launch.py  mingw.bat
scripts/build_docs_workflow/: deps_install.sh  generate_docs.sh  setup_doxygen.sh
scripts/cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  SourcesAndHeaders.cmake  Utils.cmake  Valgrind.cmake  Vcpkg.cmake  ci.cmake
scripts/cmake_build_workflow/: build.cmake  ccache_stats.cmake  configure.cmake  download_ccache.cmake  run_tests.cmake  setup_ninja_cmake.cmake
single_include/: container
src/: main.cpp  xstl.cpp
test/: CMakeLists.txt
test/config/: test_config.h.in
test/container/array.test/: CMakeLists.txt  array.fixture.h  runner.cc
test/container/darray.test/: darray.fixture.h
test/container/deque.test/: deque.fixture.h  deque.tests.h  runner.cc
test/container/forward_list.test/: CMakeLists.txt  forward_list.fixture.h  forward_list.tests.h  runner.cc
test/container/list.test/: list.fixture.h  list.tests.h  runner.cc
test/container/map/: map.tests.h  runner.cc
test/container/map.test/: CMakeLists.txt  map.fixture.h  map.tests.h
test/container/multimap/: multimap.fixture.h  multimap.tests.h  runner.cc
test/container/multimap.test/: CMakeLists.txt  multimap.fixture.h  multimap.tests.h
test/container/multiset/: multiset.fixture.h  multiset.tests.h
test/container/multiset.test/: CMakeLists.txt  multiset.fixture.h  multiset.tests.h  runner.cc
test/container/set/: set.tests.h
test/container/set.test/: CMakeLists.txt  set.tests.h
test/container/unordered_map/: runner.cc  unordered_map.tests.h
test/container/unordered_map.test/: CMakeLists.txt  unordered_map.fixture.h  unordered_map.tests.h
test/container/unordered_multimap/: unordered_multimap.fixture.h  unordered_multimap.tests.h
test/container/unordered_multimap.test/: CMakeLists.txt  runner.cc  unordered_multimap.fixture.h  unordered_multimap.tests.h
test/container/unordered_multiset/: unordered_multiset.fixture.h  unordered_multiset.tests.h
test/container/unordered_multiset.test/: CMakeLists.txt  runner.cc  unordered_multiset.fixture.h  unordered_multiset.tests.h
test/container/unordered_set/: runner.cc  unordered_set.tests.h
test/container/unordered_set.test/: CMakeLists.txt  unordered_set.tests.h
test/examples/array/: CMakeLists.txt  main.cpp
test/include/container/array.test/: CMakeLists.txt  array.tests.h
test/include/container/darray.test/: CMakeLists.txt  darray.tests.h  runner.cc
test/include/container/deque.test/: CMakeLists.txt  deque.fixture.h  deque.tests.h
test/include/container/forward_list.test/: CMakeLists.txt  forward_list.fixture.h  forward_list.tests.h  runner.cc
test/include/container/helpers/: generators.h
test/include/container/list.test/: CMakeLists.txt  list.fixture.h  list.tests.h  runner.cc
test/include/container/map.test/: map.tests.h
test/include/container/multimap.test/: multimap.tests.h
test/include/container/multiset.test/: multiset.tests.h
test/include/container/set.test/: runner.cc  set.fixture.h  set.tests.h
test/include/container/unordered_map.test/: unordered_map.tests.h
test/include/container/unordered_multimap.test/: unordered_multimap.tests.h
test/include/container/unordered_multiset.test/: unordered_multiset.tests.h
test/include/container/unordered_set.test/: unordered_set.fixture.h  unordered_set.tests.h
test/include/container/xstl.debug/array.test/: array.debug.h  basic_test.h
test/include/container/xstl.debug/deque.test/: basic_test.h  deque.debug.h
test/include/container/xstl.debug/forward_list.test/: basic_test.h  forward_list.debug.h
test/include/container/xstl.debug/list.test/: basic_test.h  list.debug.h
test/include/container/xstl.debug/map.test/: basic_test.h  map.debug.h
test/include/container/xstl.debug/multimap.test/: basic_test.h  multimap.debug.h
test/include/container/xstl.debug/multiset.test/: basic_test.h  multiset.debug.h
test/include/container/xstl.debug/set.test/: basic_test.h  set.debug.h
test/include/container/xstl.debug/unordered_map.test/: basic_test.h  unordered_map.debug.h
test/include/container/xstl.debug/unordered_multimap.test/: basic_test.h  unordered_multimap.debug.h
test/include/container/xstl.debug/unordered_multiset.test/: basic_test.h  unordered_multiset.debug.h
test/include/container/xstl.debug/unordered_set.test/: basic_test.h  unordered_set.debug.h
test/include/container/xstl.debug/vector.test/: basic_test.h  vector.debug.h
test/include/helpers/: generate_containers.h  generators.h  ultimate.h
test/include/xstl_test/: array_basic_test.h  array_tester.h  deque_basic_test.h  deque_tester.h  forward_list_basic_test.h  forward_list_tester.h  list_basic_test.h  list_tester.h  map_basic_test.h  map_tester.h  multimap_basic_test.h  multimap_tester.h  multiset_basic_test.h  multiset_tester.h  set_basic_test.h  set_tester.h  unordered_map_basic_test.h  unordered_map_tester.h  unordered_multimap_basic_test.h  unordered_multimap_tester.h  unordered_multiset_basic_test.h  unordered_multiset_tester.h  unordered_set_basic_test.h  unordered_set_tester.h  vector_basic_test.h  vector_tester.h
test/src/: algorithm.cc  all.cc  array.driver.cc  array_basic_test.cc  container_test.cc
test/src/container/: array_basic_test.cc
test/src/meta_programming/: type_traits_test.cc
(+103 files in other folders)
